# synq

./: .gitignore  .gitmodules  README.md  package.json
backend/: README.md  main.py  pyproject.toml
backend/core/: _auth.py  dataviz.py  naics.py
backend/core/data/: naics_lookups.json  sba-table-of-size-standards_effective-march-17-2023_v0.xlsx
frontend/: .gitignore  README.md  components.json  drizzle.config.ts  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
frontend/.drizzle/migrations/: 0000_init.sql  0001_opposite_colleen_wing.sql  0002_pink_matthew_murdock.sql  0003_freezing_manta.sql
frontend/.drizzle/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
frontend/app/: layout.tsx
frontend/app/(pages)/: layout.tsx  page.tsx
frontend/app/(pages)/_sam/: page.tsx
frontend/app/(pages)/naics/: page.tsx
frontend/app/(pages)/test/: page.tsx
frontend/app/api/: index.ts
frontend/app/api/_actions/: find-naics.ts
frontend/app/api/_naics/: route.ts
frontend/app/api/chat/: route.ts
frontend/app/api/sam/: route.ts
frontend/app/assets/fonts/: index.ts
frontend/app/components/: SearchBar.tsx  quick-compare-card.tsx
frontend/app/components/chat/: ChatMessage.tsx  JVPartners.tsx  NAICSClassify.tsx  (+7 more)
frontend/app/hooks/: useTransformers.ts
frontend/app/lib/: ai.ts  embed.ts  embedding.client.ts  embedding.server.ts  embedding.ts  openai.ts  sam-gov.ts  utils.ts
frontend/app/styles/: globals.css
frontend/app/utils/: index.ts  prompts.ts
(+43 files in other folders)
